# onallo-labor

./: .gitignore  README.md  main.ipynb  notebook65ef06b5ad.ipynb  transfer-learning.ipynb
onlab/: main.ipynb  main_py.py  pyproject.toml  requirements.txt
onlab/checkpoint/: fingerprint.pb  keras_metadata.pb  saved_model.pb
onlab/checkpoint/variables/: variables.index
onlab/logs/fit/0.2 Dropout/validation/: events.out.tfevents.1681217869.a9b91c2c13a5.152.14.v2
onlab/logs/fit/0.5 Dropout on Conv2DBatchNorm/train/: events.out.tfevents.1681218508.a9b91c2c13a5.152.15.v2
onlab/logs/fit/0.5 Dropout on Conv2DBatchNorm/validation/: events.out.tfevents.1681218520.a9b91c2c13a5.152.16.v2
onlab/logs/fit/20230411-115043/train/: events.out.tfevents.1681213844.a9b91c2c13a5.152.5.v2
onlab/logs/fit/20230411-115043/validation/: events.out.tfevents.1681213853.a9b91c2c13a5.152.6.v2
onlab/logs/fit/20230411-120023/train/: events.out.tfevents.1681214425.a9b91c2c13a5.152.7.v2
onlab/logs/fit/20230411-120023/validation/: events.out.tfevents.1681214437.a9b91c2c13a5.152.8.v2
onlab/logs/fit/20230411-121520/validation/: events.out.tfevents.1681215335.a9b91c2c13a5.152.10.v2
onlab/logs/fit/20230412-160432/checkpoint/: fingerprint.pb  keras_metadata.pb
onlab/logs/fit/20230412-160432/checkpoint/variables/: variables.index
onlab/logs/fit/20230412-160432/validation/: events.out.tfevents.1681315550.7abcd88fb9c1.546.1.v2
onlab/logs/fit/20230413-142956/checkpoint/: fingerprint.pb
onlab/logs/fit/20230413-142956/validation/: events.out.tfevents.1681396260.73b5816f6d1d.1767.1.v2
(+34 files in other folders)
