[tool.poetry]
name = "onlab"
version = "0.1.0"
description = ""
authors = ["Xeena2812 <leventesipos2812@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10 <3.11"
ipykernel = "^6.22.0"
tensorflow = "2.11.0"
numpy = "1.24.2"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
